row cell overflow fix, no join/replace on export

--- a/src/app/fileImport/components/FileImportPreviewRow.less
+++ b/src/app/fileImport/components/FileImportPreviewRow.less
@@ -13,6 +13,7 @@
       width: 300px;
       height: 40px;
       overflow: auto;
+      overflow-y: hidden;
       position: relative;
 
       &::-webkit-scrollbar {
